<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".emergencynumbers.EmergencyNumbersActivity">

    <include layout="@layout/toolbar_purple"
        android:id="@+id/toolbar">
    </include>

    <TextView
        android:id="@+id/txtTollfreeLBL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/toll_free_number"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtFeelfreeToCallLBL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/txtFeelfreeToCallLBL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/feel_free_to_call_us"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTollfreeLBL" />

    <Button
        android:id="@+id/btnTollFreeNo1"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".42"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toStartOf="@+id/btnTollFreeNo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFeelfreeToCallLBL"
        android:drawableLeft="@drawable/ic_call_white_24dp"
        android:background="@drawable/button_rounded_purple"
        android:drawablePadding="@dimen/default_padding"
        android:text="@string/emergency_no"
        android:textColor="@color/white"
        android:padding="@dimen/default_padding"/>

    <Button
        android:id="@+id/btnTollFreeNo2"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".42"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTollFreeNo1"
        app:layout_constraintTop_toBottomOf="@id/txtFeelfreeToCallLBL"
        android:drawableLeft="@drawable/ic_call_white_24dp"
        android:background="@drawable/button_rounded_purple"
        android:drawablePadding="@dimen/default_padding"
        android:text="@string/emergency_no"
        android:textColor="@color/white"
        android:padding="@dimen/default_padding"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_emergency_no"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/btnTollFreeNo1"
      >
    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>

